# source-code-simplifier

./: .gitignore  LICENSE  Makefile  README  index.html  index.py  setup.cfg  source_code_normalizer.py  source_code_simplifier.py  test.py
tests/: add_two_blank_lines_before_first_class_bad.py  add_two_blank_lines_before_first_class_good.py  add_two_blank_lines_between_classes_and_defs_bad.py  add_two_blank_lines_between_classes_and_defs_good.py  convert_double_quotes_to_single_quotes_bad.py  convert_double_quotes_to_single_quotes_good.py  convert_is_to_equality_when_comparing_with_constant_bad.py  convert_is_to_equality_when_comparing_with_constant_good.py  convert_to_four_spaces_indentation_bad.py  convert_to_four_spaces_indentation_good.py  fix_blank_line_at_end_of_file_bad.py  fix_blank_line_contains_whitespace_bad.py  fix_comparison_to_none_should_be_cond_is_none_bad.py  fix_comparison_to_none_should_be_cond_is_none_good.py  fix_comparison_to_true_should_be_if_cond_is_true_or_if_cond_bad.py  fix_comparison_to_true_should_be_if_cond_is_true_or_if_cond_good.py  fix_do_not_compare_types_use_isinstance_bad.py  fix_do_not_compare_types_use_isinstance_good.py  fix_float_to_full_representation_bad.py  fix_float_to_full_representation_good.py  fix_import_not_at_top_of_file_bad.py  fix_import_not_at_top_of_file_good.py  fix_invalid_escape_sequence_bad.py  fix_invalid_escape_sequence_good.py  fix_lines_after_def_decorator_bad.py  fix_lines_after_def_decorator_good.py  fix_missing_whitespace_after_comma_semicolon_or_colon_bad.py  fix_missing_whitespace_after_keyword_bad.py  (+110 more)
(+1 files in other folders)
