[metadata]
name = source-code-simplifier
version = 0.0.1
author = Paschalis Bizopoulos
author_email = pbizopoulos@protonmail.com
url = https://github.com/pbizopoulos/source-code-simplifier
description = A tool to automatically simplify python source code.
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = source_code_simplifier
python_requires = >=3.9

[options.entry_points]
console_scripts = source_code_simplifier = source_code_simplifier:main
